src/test/compile-fail/arg-type-mismatch.rs

// error-pattern: mismatched types

fn f(x: int) { }

fn main() { let i: (); i = f(()); }